force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Program__c/agf__PPM_Program__c.object-meta.xml
<CustomObject>
    <label>Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>