force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Program__c/fields/agf__End_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__End_Date__c</fullName>
    <description>End Date for the Program.</description>
    <inlineHelpText>End Date for the Program.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>