force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Program__c/fields/agf__Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>agf__Executive_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Programs_Users</relationshipName>
    <type>Lookup</type>
</CustomField>