force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Program__c/fields/agf__Program_Goals__c.field-meta.xml
<CustomField>
    <fullName>agf__Program_Goals__c</fullName>
    <label>Program Goals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>