force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Program__c/fields/agf__Program_Health_Comments__c.field-meta.xml
<CustomField>
    <fullName>agf__Program_Health_Comments__c</fullName>
    <description>Indicate the program health comments.</description>
    <inlineHelpText>Indicate the program health comments.</inlineHelpText>
    <label>Program Health Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>