force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Program__c/fields/agf__Program_Manager__c.field-meta.xml
<CustomField>
    <fullName>agf__Program_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>