force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Program__c/fields/agf__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Start_Date__c</fullName>
    <description>Start Date for the Program or Close Date.</description>
    <inlineHelpText>Start Date for the Program or Close Date.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>